--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Links - Noémie</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link rel = "icon" href = "./icon.gif" type = "image/x-icon">
   <meta name="description" content="Name linktree">
 </head>
@@ -15,6 +15,6 @@
     Noémie
   </div>
   <div id="links"></div>  
-  <script src="links.js"></script>
+  <script src="scripts/links.js"></script>
 </body>
 </html>
